// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeVisGraph should match snapshot for todo-full inbound graph 1`] = `
Object {
  "edges": Array [
    Object {
      "color": Object {
        "color": "#cfd9e0",
        "opacity": 0.8,
      },
      "font": Object {
        "align": "top",
      },
      "from": 17,
      "id": "17-9-#/responses/200/schema-#/",
      "title": "#/responses/200/schema",
      "to": 9,
    },
    Object {
      "color": Object {
        "color": "#cfd9e0",
        "opacity": 0.8,
      },
      "font": Object {
        "align": "top",
      },
      "from": 18,
      "id": "18-9-#/responses/200/schema-#/",
      "title": "#/responses/200/schema",
      "to": 9,
    },
    Object {
      "color": Object {
        "color": "#cfd9e0",
        "opacity": 0.8,
      },
      "font": Object {
        "align": "top",
      },
      "from": 20,
      "id": "20-9-#/responses/201/schema-#/",
      "title": "#/responses/201/schema",
      "to": 9,
    },
    Object {
      "color": Object {
        "color": "#cfd9e0",
        "opacity": 0.8,
      },
      "font": Object {
        "align": "top",
      },
      "from": 21,
      "id": "21-9-#/responses/200/schema/items-#/",
      "title": "#/responses/200/schema/items",
      "to": 9,
    },
  ],
  "nodes": Array [
    Object {
      "color": "#f5f8fa",
      "font": Object {
        "color": "#10161a",
      },
      "id": 20,
      "label": "Create Todo",
      "level": 1,
      "title": "gh/stoplightio/studio-demo/reference/todos/openapi.v1.json/paths/~1todos/post",
    },
    Object {
      "color": "#f5f8fa",
      "font": Object {
        "color": "#10161a",
      },
      "id": 17,
      "label": "Get Todo",
      "level": 1,
      "title": "gh/stoplightio/studio-demo/reference/todos/openapi.v1.json/paths/~1todos~1{todoId}/get",
    },
    Object {
      "color": "#f5f8fa",
      "font": Object {
        "color": "#10161a",
      },
      "id": 21,
      "label": "List Todos",
      "level": 1,
      "title": "gh/stoplightio/studio-demo/reference/todos/openapi.v1.json/paths/~1todos/get",
    },
    Object {
      "color": "#f5f8fa",
      "font": Object {
        "color": "#10161a",
      },
      "id": 18,
      "label": "Update Todo",
      "level": 1,
      "title": "gh/stoplightio/studio-demo/reference/todos/openapi.v1.json/paths/~1todos~1{todoId}/put",
    },
    Object {
      "color": "#ef932b",
      "font": Object {
        "color": "#ffffff",
      },
      "id": 1,
      "label": undefined,
      "level": 0,
      "title": "gh/stoplightio/studio-demo/reference/models/todo-full.v1.json",
    },
  ],
}
`;

exports[`computeVisGraph should match snapshot for todo-full outbound graph 1`] = `
Object {
  "edges": Array [
    Object {
      "color": Object {
        "color": "#cfd9e0",
        "opacity": 0.8,
      },
      "font": Object {
        "align": "top",
      },
      "from": 9,
      "id": "9-10-#/allOf/0-#/",
      "title": "#/allOf/0",
      "to": 10,
    },
    Object {
      "color": Object {
        "color": "#cfd9e0",
        "opacity": 0.8,
      },
      "font": Object {
        "align": "top",
      },
      "from": 9,
      "id": "9-11-#/allOf/1/properties/user-#/",
      "title": "#/allOf/1/properties/user",
      "to": 11,
    },
  ],
  "nodes": Array [
    Object {
      "color": "#f5f8fa",
      "font": Object {
        "color": "#10161a",
      },
      "id": 10,
      "label": "Todo Partial",
      "level": 1,
      "title": "gh/stoplightio/studio-demo/reference/todos/models/todo-partial.v1.json",
    },
    Object {
      "color": "#f5f8fa",
      "font": Object {
        "color": "#10161a",
      },
      "id": 11,
      "label": "User",
      "level": 1,
      "title": "gh/stoplightio/studio-demo/reference/todos/models/user.v1.json",
    },
    Object {
      "color": "#ef932b",
      "font": Object {
        "color": "#ffffff",
      },
      "id": 1,
      "label": undefined,
      "level": 0,
      "title": "gh/stoplightio/studio-demo/reference/models/todo-full.v1.json",
    },
  ],
}
`;
